// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> button variations renders disabled button 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-16 bg-salmon hover:bg-salmon-dark focus:bg-salmon cursor-not-allowed bg-grey-3 hover:bg-grey-3"
    disabled=""
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders small button 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-8 bg-salmon hover:bg-salmon-dark focus:bg-salmon"
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders small disabled button 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-8 bg-salmon hover:bg-salmon-dark focus:bg-salmon cursor-not-allowed bg-grey-3 hover:bg-grey-3"
    disabled=""
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders small teal button 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-8 bg-teal hover:bg-teal-dark focus:bg-teal"
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders teal button 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-16 bg-teal hover:bg-teal-dark focus:bg-teal"
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders white Teal button 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-16 bg-white border border-teal text-teal hover:opacity-60"
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders white Teal small button 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-8 bg-white border border-teal text-teal hover:opacity-60"
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> renders default button correctly 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-16 bg-salmon hover:bg-salmon-dark focus:bg-salmon"
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`<Button> renders icon, size, paddings and text 1`] = `
<div>
  <button
    class="flex w-12/12 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded focus:outline-none px-10 py-10 bg-salmon hover:bg-salmon-dark focus:bg-salmon"
    type="button"
  >
    <img
      src="CtaCall"
    />
    <span
      class="pl-8 pr-16"
    >
      Label
    </span>
  </button>
</div>
`;
